# sibsutis_labs

./: README.md
aocs/lab1/: lab1.sh
aocs/lab2/: Dockerfile  lab2.sh  main.go
aocs/lab3/: Dockerfile  read_containers_facts.sh  read_template_facts.sh  run.sh  start.sh
aocs/lab3/ansible/: ansible.cfg
aocs/lab3/ansible/inventory/: hosts
aocs/lab3/ansible/playbooks/: facts.yml  facts_template.yml  playbook.yml
aocs/lab3/ansible/playbooks/templates/: facts.j2
aocs/lab3/ansible/roles/generate_container/defaults/: main.yml
aocs/lab3/ansible/roles/generate_container/handlers/: main.yml
bmcs/lab1/: lab1.m
bmcs/lab2/: lab2.m
bmcs/lab3/: lab3.c  lab3.m
bmcs/lab4/: lab4.c  lab4.m
bmcs/lab5/: lab5.cpp  lab5.py
bmcs/rgr/: rgr.py  rgr_extra.py
cryptography/: CMakeLists.txt  file.txt  main.cpp
cryptography/cryptography_lib/: BMPworker.cpp  Euclid.cpp  FileWorker.cpp  Fileworker.cpp  Functions.cpp  RSAcoder.cpp  RSAworker.cpp  ShamirCoder.cpp  VernamCoder.cpp  algorithm_small_big_step.cpp  cryptography.hpp  open_key_system.cpp  small_big_step.cpp
dsp/: lab1.m  lab2.m  lab4_5.m  lab4_5_lb.m  lab6.m
signals-processing/: AP1.py  AP2.py  beamforming.py  hmatr.py  img.7z  ofdm_full_simulation.py  read_Hmatr.py  task_ofdm.py  test.py
spo/lab2/: CMakeLists.txt  clean.sh  client.c  file  file.txt  main.cpp  server.c  start_udp.sh
spo/lab3/: CMakeLists.txt  Dockerfile  docker-compose.yaml
spo/lab3/client/: client.cpp  client.hpp  main.cpp
spo/lab3/server/: main.cpp  server.cpp  server.hpp
tmo/: lab1.m  lab2.m  lab3.m  lab4.m
(+3 files in other folders)
